2004-01-16  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

        * Microsoft.Vsa/BaseVsaEngine.cs: added setter for InitNewCalled.

2003-09-29    <cesar@ciencias.unam.mx>

	* BaseVsaEngine.cs: added default constructor, added exceptions
	for Close (),  implemented GetOption, added properties that let
	know the state of the engine.

2003-09-25    <cesar@ciencias.unam.mx>

	* BaseVsaEngine.cs: Implemented the properties of "the kind of
	state machine" that BaseVsaEngine is. There are some tiny details
	- properly marked to be fixed - missing ;-). They were: Assembly,
	Evidence, GenerateDebug, IsCompiled, IsDirty, IsRunning, Language,
	LCID, Name, RootMoniker, RootNamespace, Site.
	
