@@ -490,6 +490,19 @@ namespace Microsoft.Vsa {
 			else if (namespaceNotSet)
 				throw new VsaException (VsaError.RootNamespaceNotSet);
 
+			foreach (IVsaItem item in items) {
+				if (item is VsaCodeItem) {
+					VsaCodeItem code_item = (VsaCodeItem) item;
+					Parser parser = new Parser ();
+					ScriptBlock block = (ScriptBlock) parser.Parse (code_item.SourceText, code_item.Name, 0);
+					if (block != null) {
+						SemanticAnalyser.Run (block);
+						CodeGenerator.Run (code_item.Name, block);
+						Console.WriteLine ("Compilation succeeded");
+					}						
+				} else // FIXME: implement compilation process when VsaItem is AppGlobal and Reference.
+					throw new Exception ();
+			}
 			return false;
 		}
 
